log
Fri, Apr 18, 2025 10:38:02 AM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  1:55:42 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5ffecac
Fri, Apr 18, 2025  1:59:54 PM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|0
4fa2d40
Fri, Apr 18, 2025  3:07:45 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c: In function 'firstMap':
hashmap.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1.exe: all warnings being treated as errors
da92db1
Fri, Apr 18, 2025  3:08:05 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
bafbc0a
